# GDMC_CLIENT

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: -------------.md  ----------.md  ----.md
API/: URLSession.cpp  URLSession.hpp
Interface/: GDMC.cpp  GDMC.hpp
Minecraft/: Minecraft.hpp
Procession/: building.cpp  building.hpp  gimmick.cpp  gimmick.hpp  interior.cpp  interior.hpp  process.cpp  process.hpp
untouchable/: GDMC.cpp  GDMC.hpp  URLSession.cpp  URLSession.hpp
util/: Minecraft.cpp  Minecraft.hpp  Position.cpp  Position.hpp  error.hpp
